--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">ProductApp</string>
+    <string name="app_name">Product Application</string>
     <string name="action_settings">Settings</string>
-    <string name="productTitle">Product Name</string>
-    <string name="productDescription">Product Description</string>
-    <string name="productCost">Product Cost</string>
-    <string name="productQuantity">Quantity</string>
-    <string name="productTotalCost">Total Cost</string>
-    <string name="enterProduct">Enter Product</string>
-    <string name="clearProduct">Reset</string>
+    <string name="product_title">Product Name</string>
+    <string name="product_description">Product Description</string>
+    <string name="product_cost">Product Cost</string>
+    <string name="product_quantity">Quantity</string>
+    <string name="product_total_cost">Total Cost</string>
+    <string name="enter_product">Enter Product</string>
+    <string name="clear_product">Reset</string>
     <string name="title_activity_list">Activity List</string>
-    <string name="addProduct">Add a new product!</string>
+    <string name="add_product">Add a new product!</string>
 </resources>
